Fixed contact form label and button alignment, added focus highlighting

--- a/wbs-exercises/html-landingpage-css/style.css
+++ b/wbs-exercises/html-landingpage-css/style.css
@@ -7,6 +7,12 @@ body {
     Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   background-color: #aed9f1ff;
 }
+header,
+main,
+footer {
+  max-width: 1200px;
+  margin: auto;
+}
 header {
   padding: 2rem 4rem;
   border-bottom: 2px solid #29213f;
@@ -31,11 +37,17 @@ section {
   margin: 1em;
   background-color: #efefef;
 }
+#section-about-us {
+  border-top: #29213f 3px solid;
+  border-bottom-left-radius: 5px;
+  border-bottom-right-radius: 5px;
+  line-height: 1.5em;
+}
 #section-features {
   background-color: lightcoral;
   padding: 1em;
   margin: 1em;
-  border-radius: 0.2em;
+  border-radius: 5px;
   border: #29213f 0.1em solid;
 }
 section h2 {
@@ -46,6 +58,9 @@ section ol > li::marker {
 }
 #section-gallery {
   background-color: #efefef;
+  border-top: #29213f 3px solid;
+  border-bottom-left-radius: 5px;
+  border-bottom-right-radius: 5px;
 }
 #section-gallery figure img {
   width: 25%;
@@ -63,11 +78,12 @@ footer {
   text-align: center;
 }
 form {
-  width: 50%;
+  width: fit-content;
 }
 legend {
   text-align: center;
   font-weight: bold;
+  font-size: 1.5em;
 }
 fieldset {
   border-color: #29213f;
@@ -77,16 +93,35 @@ fieldset {
 }
 label {
   font-weight: bold;
+  display: inline-block;
+  width: 7rem;
+}
+#label-message {
+  vertical-align: 15px;
 }
 button {
   border-radius: 1em;
   background-color: blanchedalmond;
+  float: right;
   padding: 0.5em;
   padding-left: 1em;
   padding-right: 1em;
   font-weight: bolder;
   font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
 }
+input,
+textarea {
+  padding: 0.25em 0.75em;
+  border-width: 0;
+  border-radius: 5px;
+}
+input:focus,
+textarea:focus {
+  outline: solid 2px aqua;
+}
 button:hover {
   background-color: blueviolet;
+  cursor: pointer;
+  border-color: blueviolet;
+  color: #efefef;
 }
